<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.pages.SettingPage"
    android:background="@color/colorBackGround">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/colorBackGround">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/colorPrimary">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/back"
                android:layout_width="@dimen/small_button"
                android:layout_height="@dimen/small_button"
                android:layout_gravity="center_vertical"
                android:src="@drawable/back_arrow"
                android:tint="@color/colorBackGround"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:layout_marginStart="@dimen/_15sdp">

            </ImageView>
        </LinearLayout>


    </com.google.android.material.appbar.AppBarLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/data"
                android:layout_margin="@dimen/_10sdp"
                android:textSize="16sp"
                android:textColor="@color/colorAccent"
                android:textStyle="bold">

            </TextView>

            <androidx.cardview.widget.CardView
                android:id="@+id/file_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardElevation="0dp"
                android:clickable="true"
                android:focusable="true"
                app:cardBackgroundColor="@color/colorBackGround">

                <LinearLayout
                    android:id="@+id/folder_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:text="@string/folder_location"
                        android:textColor="@color/grey">

                    </TextView>

                    <TextView
                        android:id="@+id/fold_location"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:paddingBottom="@dimen/_10sdp"
                        android:layout_marginStart="@dimen/_10sdp">

                    </TextView>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/darkgrey">

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/file_apps"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:foreground="?android:attr/selectableItemBackground"
                android:paddingTop="@dimen/_10sdp"
                app:cardElevation="0dp"
                android:clickable="true"
                android:focusable="true"
                app:cardBackgroundColor="@color/colorBackGround">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">


                    <TextView
                        android:id="@+id/manage_apk"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="@dimen/_10sdp"
                        android:paddingTop="@dimen/_15sdp"
                        android:textSize="16sp"
                        android:fontFamily="@font/roboto"
                        android:textColor="@color/colorText"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:text="@string/manage_extracted_file">

                    </TextView>

                    <TextView
                        android:id="@+id/apk_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="@dimen/_10sdp"
                        android:paddingTop="@dimen/_10sdp"
                        android:fontFamily="@font/roboto"
                        android:layout_marginStart="@dimen/_10sdp">

                    </TextView>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/darkgrey">

                    </LinearLayout>
                </LinearLayout>

            </androidx.cardview.widget.CardView>



        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:text="@string/theme"
                android:textColor="@color/colorAccent"
                android:textSize="16sp"
                android:textStyle="bold">

            </TextView>

            <androidx.cardview.widget.CardView
                android:id="@+id/dark_mode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:foreground="?android:attr/selectableItemBackground"
                android:paddingTop="@dimen/_10sdp"
                app:cardElevation="0dp"
                android:clickable="true"
                android:focusable="true"
                app:cardBackgroundColor="@color/colorBackGround">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:fontFamily="@font/roboto"
                        android:paddingTop="@dimen/_10sdp"
                        android:paddingBottom="@dimen/_10sdp"
                        android:textSize="16sp"
                        android:text="@string/dark_mode"
                        android:textColor="@color/colorText">

                    </TextView>

                    <Switch
                        android:id="@+id/dark_switch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="@dimen/_15sdp">

                    </Switch>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/darkgrey">

                    </LinearLayout>
                </RelativeLayout>

            </androidx.cardview.widget.CardView>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/_20sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:text="@string/others"
                android:textColor="@color/colorAccent"
                android:textSize="16sp"
                android:textStyle="bold">

            </TextView>

            <androidx.cardview.widget.CardView
                android:id="@+id/open_app_market"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:foreground="?android:attr/selectableItemBackground"
                android:paddingTop="@dimen/_10sdp"
                app:cardElevation="0dp"
                app:cardBackgroundColor="@color/colorBackGround">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="@dimen/_15sdp"
                        android:paddingTop="@dimen/_10sdp"
                        android:fontFamily="@font/roboto"
                        android:textColor="@color/colorText"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:text="@string/open_app_market"
                        android:textSize="16sp">

                    </TextView>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/darkgrey">

                    </LinearLayout>
                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/send_feedback"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:foreground="?android:attr/selectableItemBackground"
                android:paddingTop="@dimen/_10sdp"
                app:cardElevation="0dp"
                app:cardBackgroundColor="@color/colorBackGround">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="@dimen/_10sdp"
                        android:paddingTop="@dimen/_10sdp"
                        android:fontFamily="@font/roboto"
                        android:textColor="@color/colorText"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:text="@string/send_us_feedback"
                        android:textSize="16sp">

                    </TextView>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/darkgrey">

                    </LinearLayout>
                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/clear_cache"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:foreground="?android:attr/selectableItemBackground"
                android:paddingTop="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_15sdp"
                app:cardElevation="0dp"
                app:cardBackgroundColor="@color/colorBackGround">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="@dimen/_10sdp"
                        android:paddingTop="@dimen/_10sdp"
                        android:fontFamily="@font/roboto"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:text="@string/clear_cache">

                    </TextView>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/darkgrey">

                    </LinearLayout>
                </RelativeLayout>

            </androidx.cardview.widget.CardView>


        </LinearLayout>

    </LinearLayout>

</ScrollView>