<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="viewModel"
            type="com.vau.myappmanager.ui.viewmodels.AppInfoViewModel" />
    </data>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.pages.AppInfo">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:elevation="0dp"
        android:background="@color/colorPrimary">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <ImageView
            android:id="@+id/back"
            android:layout_width="@dimen/small_button"
            android:layout_height="@dimen/small_button"
            android:src="@drawable/back_arrow"
            android:layout_margin="@dimen/_15sdp"
            android:tint="@color/colorBackGround">

        </ImageView>

            <com.sackcentury.shinebuttonlib.ShineButton
                android:id="@+id/like_app"
                android:layout_width="@dimen/small_button"
                android:layout_height="@dimen/small_button"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/_10sdp"
                android:src="@android:color/darker_gray"
                app:btn_color="@android:color/darker_gray"
                app:btn_fill_color="@color/colorAccent"
                app:allow_random_color="false"
                app:siShape="@raw/star"/>

            <ImageView
                android:id="@+id/share"
                android:layout_width="@dimen/small_button"
                android:layout_height="@dimen/small_button"
                android:src="@drawable/share"
                android:layout_margin="@dimen/_15sdp"
                android:tint="@color/colorBackGround"
                android:layout_toStartOf="@id/like_app">

            </ImageView>

        </RelativeLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:id="@+id/base_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/appbar"
        android:orientation="vertical"
        android:background="@color/colorPrimary"
        android:paddingBottom="@dimen/_15sdp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/app_icon"
            android:layout_width="@dimen/_45sdp"
            android:layout_height="@dimen/_45sdp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_10sdp">

        </de.hdodenhof.circleimageview.CircleImageView>

        <TextView
            android:id="@+id/app_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_12sdp"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:textColor="@color/colorBackGround"
            android:textStyle="bold"
            android:fontFamily="@font/roboto"
            android:text="@{viewModel.appInfo.name}">

        </TextView>

        <TextView
            android:id="@+id/app_package_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textSize="14sp"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:textColor="@color/colorBackGround"
            android:gravity="center"
            android:fontFamily="@font/roboto"
            android:text="@{viewModel.appInfo.packageName}">

        </TextView>

    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/base_info"
            android:orientation="vertical"
            android:background="@color/colorBackGround">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <androidx.cardview.widget.CardView
                    android:id="@+id/extract"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardElevation="0dp"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    app:cardBackgroundColor="@color/colorBackGround">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="@dimen/_10sdp">
                        <ImageView
                            android:layout_width="@dimen/_22sdp"
                            android:layout_height="@dimen/_22sdp"
                            android:src="@drawable/extract"
                            android:tint="@color/grey"
                            android:layout_gravity="center_horizontal">

                        </ImageView>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/extract"
                            android:fontFamily="@font/roboto"
                            android:textStyle="bold"
                            android:paddingTop="@dimen/_5sdp"
                            android:layout_gravity="center_horizontal">

                        </TextView>
                    </LinearLayout>

                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:id="@+id/open"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardElevation="0dp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    app:cardBackgroundColor="@color/colorBackGround">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="@dimen/_10sdp">
                        <ImageView
                            android:layout_width="@dimen/_22sdp"
                            android:layout_height="@dimen/_22sdp"
                            android:src="@drawable/open"
                            android:tint="@color/grey"
                            android:layout_gravity="center_horizontal">

                        </ImageView>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/open"
                            android:textStyle="bold"
                            android:paddingTop="@dimen/_5sdp"
                            android:fontFamily="@font/roboto"
                            android:layout_gravity="center_horizontal">

                        </TextView>
                    </LinearLayout>

                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:id="@+id/delete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardElevation="0dp"
                    android:layout_centerVertical="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="@dimen/_15sdp"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    app:cardBackgroundColor="@color/colorBackGround">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="@dimen/_10sdp">
                        <ImageView
                            android:layout_width="@dimen/_22sdp"
                            android:layout_height="@dimen/_22sdp"
                            android:src="@drawable/delete"
                            android:tint="@color/grey"
                            android:layout_gravity="center_horizontal">

                        </ImageView>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/uninstall"
                            android:fontFamily="@font/roboto"
                            android:textStyle="bold"
                            android:paddingTop="@dimen/_5sdp"
                            android:layout_gravity="center_horizontal">

                        </TextView>
                    </LinearLayout>

                </androidx.cardview.widget.CardView>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/_10sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/darkgrey"
                android:layout_alignParentBottom="true">

            </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/version"
                    android:layout_margin="@dimen/_10sdp"
                    android:textColor="@color/grey"
                    android:textStyle="bold">

                </TextView>

                <TextView
                    android:id="@+id/version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_30sdp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:textColor="@color/colorText"
                    android:textStyle="bold"
                    android:text="@{viewModel.appInfo.version}">

                </TextView>

        </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/_10sdp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/darkgrey"
                    android:layout_alignParentBottom="true">

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/size"
                    android:layout_margin="@dimen/_10sdp"
                    android:textColor="@color/grey"
                    android:textStyle="bold">

                </TextView>

                <TextView
                    android:id="@+id/size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_30sdp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:textColor="@color/colorText"
                    android:textStyle="bold"
                    android:text="@{viewModel.appInfo.size}">

                </TextView>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/_10sdp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/darkgrey"
                    android:layout_alignParentBottom="true">

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/last_update"
                    android:layout_margin="@dimen/_10sdp"
                    android:textColor="@color/grey"
                    android:textStyle="bold">

                </TextView>

                <TextView
                    android:id="@+id/last_update"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_30sdp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:textColor="@color/colorText"
                    android:textStyle="bold">

                </TextView>

            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/_10sdp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/darkgrey"
                    android:layout_alignParentBottom="true">

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/data_directory"
                    android:layout_margin="@dimen/_10sdp"
                    android:textColor="@color/grey"
                    android:textStyle="bold">

                </TextView>

                <TextView
                    android:id="@+id/location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_30sdp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:textColor="@color/colorText"
                    android:textStyle="bold"
                    android:text="@{viewModel.appInfo.dataDir}">

                </TextView>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/_10sdp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/darkgrey"
                    android:layout_alignParentBottom="true">

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/permission"
                    android:layout_margin="@dimen/_10sdp"
                    android:textColor="@color/grey"
                    android:textStyle="bold">

                </TextView>

                <Button
                    android:id="@+id/open_setting"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/open_setting"
                    android:layout_alignParentEnd="true"
                    android:textColor="@color/colorAccent"
                    android:textStyle="bold"
                    android:textSize="12sp"
                    style="@style/Widget.MaterialComponents.Button.TextButton">

                </Button>


                <TextView
                    android:id="@+id/permission"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_40sdp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_15sdp"
                    android:textColor="@color/grey">

                </TextView>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_15sdp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/darkgrey"
                    android:layout_alignParentBottom="true">

                </LinearLayout>

                <ImageView
                    android:layout_width="@dimen/small_button"
                    android:layout_height="@dimen/small_button"
                    android:src="@drawable/google_play"
                    android:layout_margin="@dimen/_10sdp">

                </ImageView>

                <Button
                    android:id="@+id/app_link"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:text="@string/open_app_link"
                    android:background="@color/colorBackGround"
                    android:layout_marginStart="@dimen/_40sdp"
                    android:textColor="@color/colorPrimary">

                </Button>

            </RelativeLayout>

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
</layout>